force-app/main/default/objects/Opportunity/fields/FS_Recommended__c.field-meta.xml
<CustomField>
    <fullName>FS_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesperson upsell</description>
    <label>FS Recommended</label>
    <type>Checkbox</type>
</CustomField>