force-app/main/default/objects/Opportunity/fields/GA_Client_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>GA_Client_ID_Formula__c</fullName>
    <formula>gaconnector_Google_Analytics_Client_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GA Client ID (Formula)</label>
    <type>Text</type>
</CustomField>