force-app/main/default/objects/Opportunity/fields/gaconnector_First_Click_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_First_Click_Landing_Page__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Click Landing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>