force-app/main/default/objects/Opportunity/fields/gaconnector_Google_Analytics_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Google_Analytics_Client_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Google Analytics Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>