force-app/main/default/objects/Opportunity/fields/gaconnector_Latitude_from_IP__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Latitude_from_IP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>