force-app/main/default/objects/Opportunity/fields/gaconnector_Longitude__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Longitude__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>