force-app/main/default/objects/Opportunity/fields/gaconnector_Pages_visited__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Pages_visited__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pages visited</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>