force-app/main/default/objects/Opportunity/fields/gaconnector_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Time_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>