force-app/main/default/objects/Opportunity/fields/Giphy_Link__c.field-meta.xml
<CustomField>
    <fullName>Giphy_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://api.giphy.com/v1/gifs/random?api_key=TZWeYEyQ1U2zrWOlGn9UxzbX9etFbp7g&amp;tag=celebration&quot;, &quot;Celebrate!&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Giphy Link</label>
    <type>Text</type>
</CustomField>