force-app/main/default/objects/Opportunity/fields/Golden_Circle__c.field-meta.xml
<CustomField>
    <fullName>Golden_Circle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scale Express</label>
    <type>Checkbox</type>
</CustomField>