force-app/main/default/objects/Opportunity/fields/Greater_Premium__c.field-meta.xml
<CustomField>
    <fullName>Greater_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Greater Premium</label>
    <type>Checkbox</type>
</CustomField>