force-app/main/default/objects/Opportunity/fields/Group_Health_Questionnaire_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Group_Health_Questionnaire_Uploaded__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Group Health Questionnaire Uploaded</label>
    <type>Checkbox</type>
</CustomField>