force-app/main/default/objects/Opportunity/fields/Has_Accepted_Quote__c.field-meta.xml
<CustomField>
    <fullName>Has_Accepted_Quote__c</fullName>
    <label>Has Accepted Quote</label>
    <summarizedField>Quote__c.Is_Accepted__c</summarizedField>
    <summaryForeignKey>Quote__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>