force-app/main/default/objects/Opportunity/fields/In_Force_Policy__c.field-meta.xml
<CustomField>
    <fullName>In_Force_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Force Policy?</label>
    <type>Checkbox</type>
</CustomField>