force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Tracking this information on the account.</description>
    <label>Industry (OLD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B2B Services</fullName>
            </value>
            <value>
                <fullName>B2C Services</fullName>
            </value>
            <value>
                <fullName>Biotech / Healthtech</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
            <value>
                <fullName>Consultant - Business</fullName>
            </value>
            <value>
                <fullName>Consultant - Technology</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Education / Education Technology</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Financial Technology</fullName>
            </value>
            <value>
                <fullName>Manufacturing - Business/Industrial Products</fullName>
            </value>
            <value>
                <fullName>Manufacturing - Consumer Products</fullName>
            </value>
            <value>
                <fullName>Media &amp; Advertising</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Non Profit Organization</fullName>
            </value>
            <value>
                <fullName>On-Demand Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Restaurants &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Retail Sales</fullName>
            </value>
            <value>
                <fullName>Software as a Service</fullName>
            </value>
            <value>
                <fullName>Web Design &amp; Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>