force-app/main/default/objects/Opportunity/fields/Industry_formula__c.field-meta.xml
<CustomField>
    <fullName>Industry_formula__c</fullName>
    <formula>Text(Account.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Edit this field on the account page.</inlineHelpText>
    <label>Industry</label>
    <type>Text</type>
</CustomField>