force-app/main/default/objects/Opportunity/fields/Inspection_Fee__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Fee__c</fullName>
    <label>Inspection Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>