force-app/main/default/objects/Opportunity/fields/Insurance_Applications_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Applications_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Applications Uploaded</label>
    <type>Checkbox</type>
</CustomField>