force-app/main/default/objects/Opportunity/fields/Internal_Marketer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Marketer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Marketer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>