force-app/main/default/objects/Opportunity/fields/Internal_Marketer_Email__c.field-meta.xml
<CustomField>
    <fullName>Internal_Marketer_Email__c</fullName>
    <formula>Internal_Marketer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Marketer Email</label>
    <type>Text</type>
</CustomField>