force-app/main/default/objects/Opportunity/fields/Internal_Marketer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Internal_Marketer_Phone__c</fullName>
    <formula>Internal_Marketer__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Marketer Phone</label>
    <type>Text</type>
</CustomField>