force-app/main/default/objects/Opportunity/fields/Internal_Marketer_Role__c.field-meta.xml
<CustomField>
    <fullName>Internal_Marketer_Role__c</fullName>
    <description>Used for Vertical Reporting. Value is copied via Flow &quot;Copy Internal and AMR Roles&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Marketer Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>