force-app/main/default/objects/Opportunity/fields/IsVRBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsVRBypassed__c</fullName>
    <description>To override the Address Validation Rule when updating the Internal Marketer. Related to field ValidationBypassDateTime

0.00005787037 /*Five Seconds*/

SF-1123</description>
    <formula>BLANKVALUE(ValidationBypassDateTime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVRBypassed</label>
    <type>Checkbox</type>
</CustomField>