force-app/main/default/objects/Opportunity/fields/KM_Approved_Signer__c.field-meta.xml
<CustomField>
    <fullName>KM_Approved_Signer__c</fullName>
    <description>Scale</description>
    <encryptionScheme>None</encryptionScheme>
    <label>KM Approved Signer</label>
    <length>250</length>
    <type>Text</type>
</CustomField>