force-app/main/default/objects/Opportunity/fields/KM_Occupation_of_Insured__c.field-meta.xml
<CustomField>
    <fullName>KM_Occupation_of_Insured__c</fullName>
    <description>Scale</description>
    <encryptionScheme>None</encryptionScheme>
    <label>KM Occupation of Insured</label>
    <type>TextArea</type>
</CustomField>