force-app/main/default/objects/Opportunity/fields/Last_Click_Source_Medium__c.field-meta.xml
<CustomField>
    <fullName>Last_Click_Source_Medium__c</fullName>
    <formula>gaconnector_Last_Click_Source__c &amp; &quot;/&quot;  &amp;  gaconnector_Last_Click_Medium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Click Source/Medium</label>
    <type>Text</type>
</CustomField>