force-app/main/default/objects/Opportunity/fields/Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Stage Change</label>
    <type>Date</type>
</CustomField>