force-app/main/default/objects/Opportunity/fields/Lead_Type2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type2__c</fullName>
    <formula>Text(Account.Lead_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Edit this field on the account page.</inlineHelpText>
    <label>Lead Type</label>
    <type>Text</type>
</CustomField>