force-app/main/default/objects/Opportunity/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>Old. Should be updated at the account level.</description>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Hello&quot; Outreach</fullName>
            </value>
            <value>
                <fullName>Ads/Paid Search</fullName>
            </value>
            <value>
                <fullName>Biz Dev Relationship</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Cold Email</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Drift Call</fullName>
            </value>
            <value>
                <fullName>Existing/Previous Client</fullName>
            </value>
            <value>
                <fullName>Interplay Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ryan Melohn Referral</fullName>
            </value>
            <value>
                <fullName>SEO/Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>