force-app/main/default/objects/Opportunity/fields/List_of_Claims__c.field-meta.xml
<CustomField>
    <fullName>List_of_Claims__c</fullName>
    <description>Enumerates claims related to an account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>List of Claims</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>