force-app/main/default/objects/Opportunity/fields/List_of_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>List_of_Endorsements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>List of Endorsements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>