force-app/main/default/objects/Opportunity/fields/Lloyds_Specific_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Lloyds_Specific_Endorsements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lloyds Specific Endorsements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>