force-app/main/default/objects/Opportunity/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>the name of the physical location of the insured building</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Name</label>
    <type>TextArea</type>
</CustomField>