force-app/main/default/objects/Opportunity/fields/Location_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>