force-app/main/default/objects/Opportunity/fields/Location_State__c.field-meta.xml
<CustomField>
    <fullName>Location_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>