force-app/main/default/objects/Opportunity/fields/Location_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Street_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Street Address</label>
    <type>TextArea</type>
</CustomField>