force-app/main/default/objects/Opportunity/fields/Loss_Runs_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Loss_Runs_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss Runs Uploaded</label>
    <type>Checkbox</type>
</CustomField>