force-app/main/default/objects/Opportunity/fields/Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Lost_Date__c</fullName>
    <description>Stage updated to Closed/Lost</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lost Date</label>
    <type>DateTime</type>
</CustomField>