force-app/main/default/objects/Opportunity/fields/Lowest_Quoted_Premium__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Quoted_Premium__c</fullName>
    <description>Rollup: average premium across quotes received</description>
    <label>Lowest Quoted Premium</label>
    <summarizedField>Quote__c.Premium__c</summarizedField>
    <summaryForeignKey>Quote__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>