force-app/main/default/objects/Opportunity/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>Account.BillingStreet + &apos;, &apos; +  Account.BillingCity + &apos;, &apos; + TEXT(Account.BillingStateCode) + &apos; &apos; +  Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>