force-app/main/default/objects/Opportunity/fields/Mailing_Country_old__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country_old__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Country_old</label>
    <length>100</length>
    <type>Text</type>
</CustomField>