force-app/main/default/objects/Opportunity/fields/Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postal_Code__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Postal Code</label>
    <type>Text</type>
</CustomField>