force-app/main/default/objects/Opportunity/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <formula>Account.BillingStreet</formula>
    <label>Mailing Street</label>
    <type>Text</type>
</CustomField>