force-app/main/default/objects/Opportunity/fields/Mailing_Street_old__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_old__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Street_old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>