force-app/main/default/objects/Opportunity/fields/Management_Liability_Package__c.field-meta.xml
<CustomField>
    <fullName>Management_Liability_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management Liability Package</label>
    <type>Checkbox</type>
</CustomField>