force-app/main/default/objects/Opportunity/fields/Marketer_UW_Address__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW_Address__c</fullName>
    <description>Address of brokerage</description>
    <formula>Marketer_UW_Name__r.Account.BillingStreet + BR() +
Marketer_UW_Name__r.Account.BillingCity + &quot;, &quot;+
Marketer_UW_Name__r.Account.BillingState + &quot; &quot;+
Marketer_UW_Name__r.Account.BillingPostalCode + BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketer/UW Address</label>
    <type>Text</type>
</CustomField>