force-app/main/default/objects/Opportunity/fields/Marketer_UW_Email__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW_Email__c</fullName>
    <formula>Marketer_UW_Name__r.Email</formula>
    <label>Marketer/UW Email</label>
    <type>Text</type>
</CustomField>