force-app/main/default/objects/Opportunity/fields/Marketer_UW_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketer_UW_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup field for wholesale / UW contacts</description>
    <label>Marketer/UW Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Underwriter</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Wholesaler</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Scale Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>