force-app/main/default/objects/Opportunity/fields/Marketing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketing Notes</label>
    <type>TextArea</type>
</CustomField>